# todo-api

./: .gitignore  initdb.py  pyproject.toml  reset_bd.py  run.py  test_db.py  testes_api.py
src/instance/: todos.db
src/todo_api/: __init__.py  auth.py  config.py  errors.py  models.py  routes.py  schemas.py  utils.py
